Rename config.yml.txt to config.yml and index.html.txt to index.html

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,14 +1,19 @@
 backend:
   name: git-gateway
-  branch: main # This must match your GitHub repo's main branch name
-publish_mode: editorial_workflow
+  branch: main # Or the branch your site builds from (e.g., master)
+publish_mode: editorial_workflow # Optional: Enables draft/review/publish workflow
 media_folder: "public/uploads" # Where media files will be stored in your repo
-public_folder: "/uploads" # How media files are accessed on your deployed site
+public_folder: "/uploads" # Path to access media files on your site
 
 collections:
-  - name: "pages"
+  - name: "pages" # A friendly name for your content type
     label: "Pages"
     files:
       - label: "Home"
         name: "home"
-        file: "content/home.md" # Netlify CMS will create/edit this file
+        file: "content/home.md" # This is where Netlify CMS will save your "Home" page content.
+        # === ADDED THIS FIELDS SECTION ===
+        fields:
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
+        # =================================
